hot fix styling on mobile

--- a/src/theme/styles.css
+++ b/src/theme/styles.css
@@ -42,7 +42,7 @@ button {
 	margin: 20px 20px;
 	padding-bottom: 20px;
 	text-align: center;
-	max-width: 350px;
+	max-width: 280px;
 }
 
 .workout-detail {
@@ -54,13 +54,13 @@ button {
 }
 .exercise img {
 	width: 100%;
-	max-height: 50vh;
+	max-height: 40vh;
 	vertical-align: middle;
 }
 
 .exercise .example-photo {
 	width: 100%;
-	height: 50vh;
+	height: 40vh;
 	vertical-align: middle;
 	background: no-repeat center center;
 	background-size: contain;
